# geoopen-reader

./: .gitignore  README.md  pyproject.toml  setup.py
geoopen_reader/: reader.py
