
[build-system]
requires = ["setuptools >= 61.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "geoopen-reader"
version = "0.1"
dependencies = [
    "maxminddb"
]

[tool.setuptools]
packages = ["geoopen_reader", "geoopen_reader.db"]

[tool.setuptools.package-data]
"geoopen_reader.db" = ["country.json", "GeoOpen-Country.mmdb", "GeoOpen-Country-ASN.mmdb"]
